--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@formkit/auto-animate": "^0.8.0",
     "@headlessui/react": "^1.7.0",
     "@tailwindcss/forms": "^0.5.3",
+    "aos": "^2.3.4",
     "autoprefixer": "^10.4.8",
     "axios": "^1.5.0",
     "clsx": "^1.2.1",
